# tapl-impl

./: .gitignore  README.md
simple-lambda-calculus/: tapl.cabal
simple-lambda-calculus/app/: Eval.hs  Main.hs  Parser.hs  Term.hs
simply-typed-lambda-calculus/: README.md  tapl.cabal  test.lambda
simply-typed-lambda-calculus/app/: Error.hs  Eval.hs  Main.hs  Parser.hs  Term.hs  Type.hs  Typecheck.hs
simply-typed-lambda-calculus/tests/: Test.hs
simply-typed-with-recursive-types/: README.md  hungry-stream.lambda  sum-list-custom-fix.lambda  sum-list.lambda  test.lambda
simply-typed-with-recursive-types/app/: Error.hs  Eval.hs  Parser.hs  Term.hs  Type.hs  Typecheck.hs
simply-typed-with-recursive-types/tests/: Test.hs
simply-typed-with-subtyping/: join-meet.lambda  subtyping.lambda  test.lambda
simply-typed-with-subtyping/app/: Error.hs  Eval.hs  Main.hs  Parser.hs  Term.hs  Type.hs  Typecheck.hs
simply-typed-with-subtyping/tests/: Test.hs
simply-typed-with-type-reconstruction/: README.md  test.lambda
simply-typed-with-type-reconstruction/app/: Error.hs  Eval.hs  Main.hs  Parser.hs  Term.hs  Type.hs  Typecheck.hs
system-f/: README.md
system-f-omega/: README.md  existential-counter.lambda  tapl.cabal  test.lambda
system-f-omega/app/: Error.hs  Eval.hs  Kind.hs  Parser.hs  Term.hs  Type.hs  Typecheck.hs
system-f-sub/: README.md  quadruple.lambda  test.lambda
system-f-sub/app/: Error.hs  Main.hs  Parser.hs  Term.hs  Type.hs  Typecheck.hs
system-f/app/: Error.hs  Eval.hs  Type.hs
system-f/tests/: Test.hs
untyped-lambda-calculus/: README.md
untyped-lambda-calculus/app/: Eval.hs  Main.hs  Term.hs
