cabal-version:      2.4
name:               tapl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eduhenke
maintainer:         eduardo_henke@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tapl
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        text ^>=1.2.5.0,
        parser-combinators ^>=1.3.0,
        mtl ^>=2.2.2,
        transformers ^>= 0.5.6.2,
        megaparsec ^>=9.2.0
    hs-source-dirs:   app
    other-modules: Parser, Term, Eval
    default-language: Haskell2010
