cabal-version:      2.4
name:               tapl
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eduhenke
maintainer:         eduardo_henke@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tapl
    main-is:          Main.hs
    build-depends:
        base ^>=4.15.1.0,
        text ^>=1.2.5.0,
        parser-combinators ^>=1.3.0,
        mtl ^>=2.2.2,
        transformers ^>= 0.5.6.2,
        megaparsec ^>=9.2.0,
    hs-source-dirs:   app
    other-modules: Parser, Term, Eval, Type, Typecheck, Error
    default-language: Haskell2010

library
    exposed-modules: Parser, Term, Type, Eval, Typecheck, Error
    build-depends:
        base ^>=4.15.1.0,
        text ^>=1.2.5.0,
        parser-combinators ^>=1.3.0,
        mtl ^>=2.2.2,
        transformers ^>= 0.5.6.2,
        megaparsec ^>=9.2.0,
    hs-source-dirs:   app
    -- default-language: Haskell2010

test-suite test
    main-is:         Test.hs
    type:            exitcode-stdio-1.0
    build-depends:       base
                        , tasty >=1.4
                        , tasty-hunit
                        , tapl
    hs-source-dirs:   tests
    -- other-modules: Parser
